[tool.poetry]
name = "b2"
version = "0.1.0"
description = ""
authors = ["Owen <oanyakie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-binance = "^1.0.17"
pymongo = "^4.3.3"
python-telegram = "0.13"
telegram = "^0.0.1"
python-telegram-bot = "v13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
